# bmstu_cpp_course

./: CMakeLists.txt  StringTest.cpp  homework_2.cpp  homework_2.h
tasks/: CMakeLists.txt
tasks/bmstu_lets/task_let_1_2/: base_algo_let.cpp
tasks/bmstu_list/task_list/: bmstu_list.h  bmstu_list_test.cpp
tasks/bmstu_optional/: CMakeLists.txt
tasks/bmstu_optional/task_optional/: bmstu_optional.h  bmstu_optional_test.cpp
tasks/bmstu_simple_vector/task_simple_vector/: bmstu_simple_vector.h  simple_vector_test.cpp
tasks/task_basic_c/task_int2str/: int2str.c
tasks/task_basic_c/task_str2int/: str2int  str2int.c
